Implemented working pendulum + phase space.

--- a/src/index.html
+++ b/src/index.html
@@ -25,22 +25,7 @@
 </head>
 <body>
 
-<div>
-    <img src="web-programming.svg"/>
-    <div>
-        <p>Basic template for modern front end web development.</p>
-        <br>
-        <p>Supporting:</p>
-        <ul>
-            <li>ES6 syntax</li>
-            <li>TS + CSS code bundling</li>
-            <li>Dev / Prod environments</li>
-            <li>Jest Testing</li>
-        </ul>
-        <br>
-        Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
-    </div>
-</div>
+<div id="container"></div>
 
 <script src="./bundle.js"></script>
 </body>
